@@ -40,7 +40,8 @@ Problems corrected in 4.0.0 Final.
 
 Other changes in Shorewall 4.0.0 Final.
 
-None.
+1)  The Perl modules in /usr/share/shorewall-perl/Shorewall/ have been
+    consolidated somewhat, leading to slightly faster compilation.
 
 Migration Considerations:
 
